--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "bluebird": "^2.9.26",
     "co": "^4.5.4",
     "vow": "^0.4.9"
+  },
+  "devDependencies": {
+    "babel": "^5.4.7",
+    "babel-core": "^5.4.7"
   }
 }
